--- a/GoList/res/drawable-hdpi/button.xml
+++ b/GoList/res/drawable-hdpi/button.xml
@@ -7,18 +7,18 @@
              <gradient  android:angle="-90"  android:startColor="#a11005" android:endColor="#d62608"  />           
          </shape>
      </item>
-    <item android:state_focused="true">
-         <shape android:shape="rectangle"  >
-             <corners android:radius="3dip" />
-             <stroke android:width="1dip" android:color="#c53e2b" />
-             <solid  android:color="#e0341e"/>      
-         </shape>
-     </item> 
+<!--     <item android:state_focused="true"> -->
+<!--          <shape android:shape="rectangle"  > -->
+<!--              <corners android:radius="3dip" /> -->
+<!--              <stroke android:width="1dip" android:color="#c53e2b" /> -->
+<!--              <solid  android:color="#e0341e"/>       -->
+<!--          </shape> -->
+<!--      </item>  -->
     <item >
         <shape android:shape="rectangle"  >
              <corners android:radius="3dip" />
-             <stroke android:width="1dip" android:color="#c53e2b" />
-             <gradient  android:angle="-90"  android:startColor="#FF7C00" android:endColor="#FF2F00" />           
+<!--              <stroke android:width="1dip" android:color="#c53e2b" /> -->
+             <gradient  android:angle="-90"  android:startColor="#0060AF" android:centerColor="#001575" android:endColor="#00447F" />           
          </shape>
      </item>
 </selector>
