--- a/GoList/res/layout/register.xml
+++ b/GoList/res/layout/register.xml
@@ -20,7 +20,7 @@
             android:layout_height="fill_parent"
             android:gravity="center_vertical"
             android:layout_weight="0.97"
-            android:text="@string/login"
+            android:text="@string/register"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             android:layout_margin="10dip"
@@ -54,26 +54,29 @@
         style="@style/editTextLoginStyle"
         android:background="#FFFFFF"
         android:hint="@string/password"
-        android:inputType="textPassword" />
-
-    <Button
-        android:id="@+id/buttonLogin"
+        android:inputType="textPassword" />   
+        
+    <EditText
+        android:id="@+id/editText3"
+        android:maxLength="20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        style="@style/btnStyleOrange"
-        android:text="@string/login"/>
+        android:ems="10"
+        android:textCursorDrawable="@drawable/cursor"
+        android:layout_margin="15dip"
+        style="@style/editTextLoginStyle"
+        android:background="#FFFFFF"
+        android:hint="@string/repeatpassword"
+        android:inputType="textPassword" />   
     
     <Button
-        android:id="@+id/buttonRegistrieren"
+        android:id="@+id/buttonCreateAcc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dip"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         style="@style/btnStyleOrange"
-        android:text="@string/newacc"/>
+        android:text="@string/register"/>
 
 </LinearLayout>
