--- a/GoList/res/layout/createnewlistlayout.xml
+++ b/GoList/res/layout/createnewlistlayout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"    
+    android:layout_height="fill_parent"
     android:background="@layout/gradient1"
     android:orientation="vertical" >
 
@@ -21,7 +21,7 @@
             android:layout_margin="5dip"
             android:layout_weight="0.97"
             android:gravity="center_vertical"
-            android:text="My Lists"
+            android:text="New List"
             android:ellipsize="marquee" 
     		android:marqueeRepeatLimit="marquee_forever"
     		android:scrollHorizontally="true" 
@@ -49,21 +49,48 @@
 
     </LinearLayout>
     
-    <Button
-        android:id="@+id/buttonNewList"
+    <EditText
+        android:id="@+id/editText1"
+        android:maxLength="50"
+        android:textCursorDrawable="@drawable/cursor"
+        android:layout_margin="15dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:layout_marginBottom="5dip"
+        style="@style/editTextLoginStyle"
+        android:background="#FFFFFF"
+        android:hint="@string/name"
+        android:ems="10" >
+        <requestFocus />
+    </EditText>
+    
+    <Button
+        android:id="@+id/buttonAddUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         style="@style/btnStyleOrange"
-        android:text="Create New List"/>
-
-    <ListView
-        android:id="@+id/listView1"
+        android:text="Invite Friends"/>
+    
+    <Button
+        android:id="@+id/buttonSave"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+        style="@style/btnStyleOrange"
+        android:text="Save"/>
+    
+    <Button
+        android:id="@+id/buttonCancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+        style="@style/btnStyleOrange"
+        android:text="Cancel"/>
 
 </LinearLayout>
