--- a/GoList/res/layout/invitefriendslayout.xml
+++ b/GoList/res/layout/invitefriendslayout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"    
+    android:layout_height="fill_parent"
     android:background="@layout/gradient1"
     android:orientation="vertical" >
 
@@ -21,7 +21,7 @@
             android:layout_margin="5dip"
             android:layout_weight="0.97"
             android:gravity="center_vertical"
-            android:text="My Lists"
+            android:text="Invite Friends"
             android:ellipsize="marquee" 
     		android:marqueeRepeatLimit="marquee_forever"
     		android:scrollHorizontally="true" 
@@ -34,7 +34,7 @@
     		android:freezesText="true" />
         
         <ProgressBar
-            android:id="@+id/progressBar1"
+            android:id="@+id/progressBarInviteFriends"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -43,22 +43,26 @@
             android:indeterminateDrawable="@drawable/progressbar3"
             android:interpolator="@android:anim/linear_interpolator"
             android:minHeight="48dp"
-            android:indeterminate="true"
-            android:visibility="gone"
+            android:indeterminate="false"
+            android:visibility="visible"
             android:progressDrawable="@drawable/progressbar3" />
 
     </LinearLayout>
     
-    <Button
-        android:id="@+id/buttonNewList"
+    <EditText
+        android:id="@+id/editTextSearch"
+        android:maxLength="50"
+        android:textCursorDrawable="@drawable/cursor"
+        android:layout_margin="10dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:layout_marginBottom="5dip"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        style="@style/btnStyleOrange"
-        android:text="Create New List"/>
+        style="@style/editTextLoginStyle"
+        android:background="#FFFFFF"
+        android:hint="Search"
+        android:ems="10" >
+
+        <requestFocus />
+    </EditText>
 
     <ListView
         android:id="@+id/listView1"
