--- a/GoList/res/layout/articlelistitem.xml
+++ b/GoList/res/layout/articlelistitem.xml
@@ -11,7 +11,7 @@
         android:layout_width="65dip"
    		android:layout_height="65dip"
     	android:scaleType="fitCenter"
-        android:src="@drawable/list_icon" />
+        android:src="@drawable/article_icon" />
 
     <TextView
         android:id="@+id/secondLine"
@@ -37,7 +37,6 @@
         android:layout_toRightOf="@id/icon"
         android:gravity="center_vertical"
         android:textColor="#FFFFFF"
-        android:text="Example application"
         android:textSize="16sp" />
 
 </RelativeLayout> 
