--- a/GoList/res/layout/createnewarticlelayout.xml
+++ b/GoList/res/layout/createnewarticlelayout.xml
@@ -28,13 +28,13 @@
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:singleLine="true"
-            android:text="New List"
+            android:text="New Article"
             android:textColor="#FFFFFF"
             android:textSize="37sp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/buttonSave"
+            android:id="@+id/buttonSaveArticle"
             style="@style/btnStyleOrange"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -56,48 +56,62 @@
             android:visibility="gone" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dip"
+        android:clickable="true"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/article_icon" />
+
+        <EditText
+            android:id="@+id/editTextName"
+            style="@style/editTextLoginStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dip"
+            android:background="#FFFFFF"
+            android:ems="10"
+            android:hint="@string/name"
+            android:maxLength="50"
+            android:textCursorDrawable="@drawable/cursor" >
+
+            <requestFocus />
+        </EditText>
+    </LinearLayout>
+
     <EditText
-        android:id="@+id/editTextName"
+        android:id="@+id/editTextAmount"
         style="@style/editTextLoginStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dip"
         android:background="#FFFFFF"
         android:ems="10"
-        android:hint="@string/name"
+        android:hint="Amount"
         android:maxLength="50"
         android:textCursorDrawable="@drawable/cursor" >
-
-        <requestFocus />
     </EditText>
 
-    <Button
-        android:id="@+id/buttonAddUser"
-        style="@style/btnStyleOrange"
+    <EditText
+        android:id="@+id/editTextDescription"
+        style="@style/editTextLoginStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:layout_marginTop="10dip"
-        android:text="Invite a Friend" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dip"
-        android:layout_marginBottom="2dip"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:textColor="#FFFFFF"
-        android:text="People"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <ListView
-        android:id="@+id/listViewPeople"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dip" >
-    </ListView>
+        android:layout_height="0dip"
+        android:layout_margin="15dip"
+        android:layout_weight="0.38"
+        android:background="#FFFFFF"
+        android:inputType="textMultiLine"
+        android:gravity="top|left"
+        android:ems="10"
+        android:hint="Description"
+        android:maxLength="300"
+        android:textCursorDrawable="@drawable/cursor" >
+    </EditText>
 
 </LinearLayout>
