--- a/GoList/res/layout/listlayout.xml
+++ b/GoList/res/layout/listlayout.xml
@@ -15,13 +15,13 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textViewList"
             android:layout_width="0dip"
             android:layout_height="fill_parent"
             android:layout_margin="5dip"
             android:layout_weight="0.97"
             android:gravity="center_vertical"
-            android:text="My Lists"
+            android:text="List"
             android:ellipsize="marquee" 
     		android:marqueeRepeatLimit="marquee_forever"
     		android:scrollHorizontally="true" 
@@ -34,7 +34,7 @@
     		android:freezesText="true" />
         
         <ProgressBar
-            android:id="@+id/progressBarLists"
+            android:id="@+id/progressBarList"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -50,7 +50,7 @@
     </LinearLayout>
     
     <Button
-        android:id="@+id/buttonNewList"
+        android:id="@+id/buttonNewArticle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
@@ -58,10 +58,10 @@
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         style="@style/btnStyleOrange"
-        android:text="Create New List"/>
+        android:text="Add Article"/>
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/listViewArticles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
