--- a/GoList/res/layout/userlistitem.xml
+++ b/GoList/res/layout/userlistitem.xml
@@ -11,7 +11,7 @@
         android:layout_width="65dip"
    		android:layout_height="65dip"
     	android:scaleType="fitCenter"
-        android:src="@drawable/list_icon" />
+        android:src="@drawable/user_icon" />
 
     <TextView
         android:id="@+id/secondLine"
