--- a/GoList/res/layout/createnewarticlelayout.xml
+++ b/GoList/res/layout/createnewarticlelayout.xml
@@ -28,7 +28,7 @@
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:singleLine="true"
-            android:text="New Article"
+            android:text="New Item"
             android:textColor="#FFFFFF"
             android:textSize="37sp"
             android:textStyle="bold" />
