--- a/GoList/res/layout/listlayout.xml
+++ b/GoList/res/layout/listlayout.xml
@@ -58,7 +58,7 @@
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         style="@style/btnStyleOrange"
-        android:text="Add Article"/>
+        android:text="Add Item"/>
 
     <ListView
         android:id="@+id/listViewArticles"
