--- a/GoList/res/layout/createnewitemlayout.xml
+++ b/GoList/res/layout/createnewitemlayout.xml
@@ -28,7 +28,7 @@
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:singleLine="true"
-            android:text="New Item"
+            android:text="@string/newitem"
             android:textColor="#FFFFFF"
             android:textSize="37sp"
             android:textStyle="bold" />
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="5dip"
-            android:text="Save" />
+            android:text="@string/save" />
 
         <ProgressBar
             android:id="@+id/progressBar1"
@@ -93,7 +93,7 @@
         android:layout_margin="15dip"
         android:background="#FFFFFF"
         android:ems="10"
-        android:hint="Amount"
+        android:hint="@string/amount"
         android:maxLength="50"
         android:textCursorDrawable="@drawable/cursor" >
     </EditText>
@@ -107,9 +107,9 @@
         android:layout_weight="0.38"
         android:background="#FFFFFF"
         android:inputType="textMultiLine"
-        android:gravity="top|left"
+        android:gravity="top|start"
         android:ems="10"
-        android:hint="Description"
+        android:hint="@string/description"
         android:maxLength="300"
         android:textCursorDrawable="@drawable/cursor" >
     </EditText>
