--- a/GoList/res/layout/invitefriendslayout.xml
+++ b/GoList/res/layout/invitefriendslayout.xml
@@ -21,7 +21,7 @@
             android:layout_margin="5dip"
             android:layout_weight="0.97"
             android:gravity="center_vertical"
-            android:text="Invite Friends"
+            android:text="@string/invitefriends"
             android:ellipsize="marquee" 
     		android:marqueeRepeatLimit="marquee_forever"
     		android:scrollHorizontally="true" 
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         style="@style/editTextLoginStyle"
         android:background="#FFFFFF"
-        android:hint="Search"
+        android:hint="@string/search"
         android:ems="10" >
 
         <requestFocus />
