--- a/GoList/res/layout/register.xml
+++ b/GoList/res/layout/register.xml
@@ -41,7 +41,7 @@
     </LinearLayout>
     
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/editTextRegisterName"
         android:maxLength="50"
         android:textCursorDrawable="@drawable/cursor"
         android:layout_margin="15dip"
@@ -56,7 +56,7 @@
     </EditText>
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editTextRegisterPassword"
         android:maxLength="20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
         android:inputType="textPassword" />   
         
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editTextRegisterRepeatPassword"
         android:maxLength="20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
