--- a/GoList/res/layout/listlistitem.xml
+++ b/GoList/res/layout/listlistitem.xml
@@ -8,6 +8,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="6dip"
+        android:layout_marginEnd="6dip"
         android:layout_width="65dip"
    		android:layout_height="65dip"
     	android:scaleType="fitCenter"
@@ -19,11 +20,13 @@
         android:layout_height="26dip"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_toRightOf="@id/icon"
+        android:layout_toEndOf="@id/icon"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textColor="#FFFFFF"
-        android:text="Description"
+        android:text="@string/description"
         android:textSize="12sp" />
 
     <TextView
@@ -32,12 +35,13 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/secondLine"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
         android:layout_toRightOf="@id/icon"
+        android:layout_toEndOf="@id/icon"
         android:gravity="center_vertical"
         android:textColor="#FFFFFF"
-        android:text="Example application"
         android:textSize="16sp" />
 
 </RelativeLayout> 
