--- a/GoList/res/layout/mylistslayout.xml
+++ b/GoList/res/layout/mylistslayout.xml
@@ -21,7 +21,7 @@
             android:layout_margin="5dip"
             android:layout_weight="0.97"
             android:gravity="center_vertical"
-            android:text="My Lists"
+            android:text="@string/mylists"
             android:ellipsize="marquee" 
     		android:marqueeRepeatLimit="marquee_forever"
     		android:scrollHorizontally="true" 
@@ -58,7 +58,7 @@
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         style="@style/btnStyleOrange"
-        android:text="Create New List"/>
+        android:text="@string/createnewlist"/>
 
     <ListView
         android:id="@+id/listView1"
