--- a/GoList/res/layout/listlayout.xml
+++ b/GoList/res/layout/listlayout.xml
@@ -17,7 +17,7 @@
         <TextView
             android:id="@+id/textViewList"
             android:layout_width="0dip"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:layout_margin="5dip"
             android:layout_weight="0.97"
             android:gravity="center_vertical"
@@ -37,28 +37,30 @@
             android:id="@+id/progressBarList"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
+            android:indeterminate="true"
+            android:layout_margin="10dp"
             android:indeterminateDrawable="@drawable/progressbar3"
             android:interpolator="@android:anim/linear_interpolator"
+            android:progressDrawable="@drawable/progressbar3"
             android:minHeight="48dp"
-            android:indeterminate="true"
-            android:visibility="visible"
-            android:progressDrawable="@drawable/progressbar3" />
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/buttonMenu"
+            style="@style/btnStyleOrange"
+            android:layout_width="30dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/menu_button1"
+            android:padding="20dp" />
 
     </LinearLayout>
-    
-    <Button
-        android:id="@+id/buttonNewArticle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:layout_marginBottom="5dip"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        style="@style/btnStyleOrange"
-        android:text="@string/additem"/>
 
     <ListView
         android:id="@+id/listViewArticles"
