--- a/GoList/res/layout/drawer_list_item.xml
+++ b/GoList/res/layout/drawer_list_item.xml
@@ -24,6 +24,6 @@
         android:singleLine="true"
         android:textColor="#ffffff"
         android:gravity="center_vertical"
-        android:textSize="24dp" />
+        android:textSize="22sp" />
 
 </LinearLayout>
