--- a/GoList/res/layout/mylistslayout.xml
+++ b/GoList/res/layout/mylistslayout.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent" >
 
     <RelativeLayout
+        android:id="@+id/mylistslayout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#007abb" >
+       android:background="#007abb" >
 
         <include layout="@layout/titlebar_menu" />
         
@@ -23,22 +24,13 @@
             android:textColor="#60FFFFFF"
             android:textSize="40sp"
             android:visibility="invisible" />
-
-        <LinearLayout
-            android:id="@+id/linerLayoutBackground"
-            android:layout_width="fill_parent"
-            android:layout_height="30dp"
-            android:layout_below="@+id/linearLayoutTitle"
-            android:visibility="invisible"
-            android:background="@drawable/listviewbackgroundgradient"
-            android:orientation="horizontal" >
-        </LinearLayout>
-
+        
         <ListView
             android:id="@+id/listView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayoutTitle"
+            android:background="@null"
             android:layout_margin="10dp"
             android:divider="@android:color/transparent"
             android:dividerHeight="10dp"
