--- a/GoList/res/layout/titlebar.xml
+++ b/GoList/res/layout/titlebar.xml
@@ -34,6 +34,7 @@
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:minHeight="48dp"
+            android:minWidth="48dp"
             android:indeterminate="true"
             android:visibility="visible"
             android:layout_marginRight="15dp"
