--- a/GoList/res/layout-sw350dp/register.xml
+++ b/GoList/res/layout-sw350dp/register.xml
@@ -38,6 +38,7 @@
                 android:ems="10"
                 android:hint="@string/name"
                 android:maxLength="50"
+                android:maxLines="1"
                 android:textCursorDrawable="@drawable/cursor" >
 
                 <requestFocus />
@@ -53,6 +54,7 @@
                 android:hint="@string/password"
                 android:inputType="textPassword"
                 android:maxLength="20"
+                android:maxLines="1"
                 android:textCursorDrawable="@drawable/cursor" />
 
             <EditText
@@ -65,6 +67,7 @@
                 android:hint="@string/repeatpassword"
                 android:inputType="textPassword"
                 android:maxLength="20"
+                android:maxLines="1"
                 android:textCursorDrawable="@drawable/cursor" />
 
             <Button
