--- a/GoList/res/layout/edititemlayout.xml
+++ b/GoList/res/layout/edititemlayout.xml
@@ -15,6 +15,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
         android:textColor="#ffffff"
         android:textSize="16sp" />
 
@@ -76,6 +78,7 @@
             android:ems="10"
             android:hint="@string/name"
             android:maxLength="50"
+            android:maxLines="1"
             android:singleLine="true"
             android:textCursorDrawable="@drawable/cursor" >
 
