--- a/GoList/res/layout/listlayout.xml
+++ b/GoList/res/layout/listlayout.xml
@@ -28,7 +28,7 @@
         <ListView
             android:id="@+id/listViewArticles"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@+id/linearLayoutTitle"
             android:layout_margin="10dp"
             android:divider="@android:color/transparent"
@@ -56,7 +56,7 @@
 
     <ExpandableListView
         android:id="@+id/navList"
-        android:layout_width="240dp"
+        android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="#95ffffff"
