--- a/GoList/res/layout/mylistslayout.xml
+++ b/GoList/res/layout/mylistslayout.xml
@@ -28,7 +28,7 @@
         <ListView
             android:id="@+id/listView1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@+id/linearLayoutTitle"
             android:background="@null"
             android:layout_margin="10dp"
@@ -57,7 +57,7 @@
 
     <ListView
         android:id="@+id/navList"
-        android:layout_width="230dp"
+        android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="#95ffffff"
