--- a/GoList/res/layout/userlistitem.xml
+++ b/GoList/res/layout/userlistitem.xml
@@ -11,23 +11,9 @@
         android:layout_marginEnd="6dip"
         android:layout_width="65dip"
    		android:layout_height="65dip"
+        android:layout_centerVertical="true"
     	android:scaleType="fitCenter"
         android:src="@drawable/user_icon" />
-
-    <TextView
-        android:id="@+id/secondLine"
-        android:layout_width="fill_parent"
-        android:layout_height="26dip"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@id/icon"
-        android:layout_toEndOf="@id/icon"
-        android:ellipsize="marquee"
-        android:singleLine="true"
-        android:textColor="#FFFFFF"
-        android:text="@string/description"
-        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/title"
@@ -37,6 +23,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
         android:layout_alignWithParentIfMissing="true"
         android:layout_toRightOf="@id/icon"
         android:layout_toEndOf="@id/icon"
